gemlock json fix, button styling, overflow fix

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,11 +1,10 @@
-
-
 .bg-home {
   background: url(/img/DateBagged-BG.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  overflow: hidden;
 }
 
 .logo {
@@ -16,21 +15,48 @@
 
 @media screen and (max-width: 770px) {
     .logo {
+      max-width: 350px;
       text-align: center;
+      margin-left: 5px;
     }
 }
 
-.btn-danger {
-  margin-top: 20px;
-  margin-right: 20px;
+.fa {
+  color: #ED1C24;
 }
 
-.btn-danger a , .btn-danger a:hover , a:active {
+.fa:hover {
+  color: #000;
+}
+
+.prompt a button {
+  margin-top: 20px;
+  margin-right: 20px;
   color: #fff;
-  letter-spacing: 3px;
-  font-family: impact;
+  background-color: #ED1C24;
+  letter-spacing: 2px;
+  font-family: arial-black;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+@media screen and (max-width: 770px) {
+    .prompt a button {
+      text-align: center;
+      margin-left: 20px;
+  }
+}
+
+.prompt a button:hover {
+  color: #ED1C24;
+  background-color: #fff;
+}
+
+.promt a:active {
+  margin-top: 20px;
+  margin-right: 20px;
+  color: #ff0000;
+  background-color: #ED1C24;
 }
 
 .video {
@@ -48,6 +74,15 @@
   text-align: center;
   padding: 20px 0;
   margin-left: -20px;
+}
+
+@media screen and (max-width: 770px) {
+    .signup {
+      max-width: 350px;
+      max-height: auto;
+      text-align: center;
+      margin-left: -0px;
+  }
 }
 
 .collapse ul li a img {
